STATS WORKS NOWWWWWWW HEHEHEHE
database totally working on yacata :D:D:D:D

--- a/MScIT_TeamProject_TemplateProject/src/commandline/.gitignore
+++ b/MScIT_TeamProject_TemplateProject/src/commandline/.gitignore
@@ -1,1 +1,11 @@
 /mainmaintest.java
+/AIUser.class
+/Card.class
+/Controller.class
+/DownloadStats.class
+/GenericUser.class
+/HumanUser.class
+/Model.class
+/TopTrumpsCLIApplication.class
+/UploadStats.class
+/writeToLog.class
