--- a/MScIT_TeamProject_TemplateProject/pom.xml
+++ b/MScIT_TeamProject_TemplateProject/pom.xml
@@ -37,10 +37,12 @@
 
 		<!-- One of the requirements is to save results in a (mysql) database, 
 			so lets import the database connection driver libruary for that as well -->
+
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.38</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.5</version>
+			<!-- <version>9.0-801.jdbc4</version> -->
 		</dependency>
 
 	</dependencies>
