--- a/MScIT_TeamProject_TemplateProject/pom.xml
+++ b/MScIT_TeamProject_TemplateProject/pom.xml
@@ -35,6 +35,13 @@
 			<version>${dropwizard.version}</version>
 		</dependency>
 
+<!-- Dropwizard assets -->
+	<dependency>
+		<groupId>io.dropwizard</groupId>
+		<artifactId>dropwizard-assets</artifactId>
+		<version>${dropwizard.version}</version>
+	</dependency>
+
 		<!-- One of the requirements is to save results in a (mysql) database, 
 			so lets import the database connection driver libruary for that as well -->
 
