--- a/MScIT_TeamProject_TemplateProject/pom.xml
+++ b/MScIT_TeamProject_TemplateProject/pom.xml
@@ -35,12 +35,12 @@
 			<version>${dropwizard.version}</version>
 		</dependency>
 
-<!-- Dropwizard assets -->
-	<dependency>
-		<groupId>io.dropwizard</groupId>
-		<artifactId>dropwizard-assets</artifactId>
-		<version>${dropwizard.version}</version>
-	</dependency>
+		<!-- Dropwizard assets -->
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-assets</artifactId>
+			<version>${dropwizard.version}</version>
+		</dependency>
 
 		<!-- One of the requirements is to save results in a (mysql) database, 
 			so lets import the database connection driver libruary for that as well -->
@@ -50,6 +50,14 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.5</version>
 			<!-- <version>9.0-801.jdbc4</version> -->
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.3.1</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -167,6 +175,12 @@
 					<source />
 					<target />
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
 			</plugin>
 
 			<!-- Packages those sources in a Jar file -->
