--- a/MScIT_TeamProject_TemplateProject/.classpath
+++ b/MScIT_TeamProject_TemplateProject/.classpath
@@ -13,5 +13,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="src/commandline/postgresql-42.2.5.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
