--- a/MScIT_TeamProject_TemplateProject/pom.xml
+++ b/MScIT_TeamProject_TemplateProject/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.ac.gla</groupId>
-	<artifactId>MScIT2019Project</artifactId>
+	<artifactId>MScIT2019Project</artifactId> <!-- MScIT2019Project -->
 	<version>1.0</version>
 	<name>Top Trumps Application Project</name>
 	<description>This is the template java project for the Top Trumps Assessed Excercise for IT Software Development at Glasgow 2019. </description>
@@ -77,6 +77,23 @@
 			instructs eclipse how to build the maven project -->
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>single</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+					</configuration>
+				</plugin>
+
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
