--- a/MScIT_TeamProject_TemplateProject/pom.xml
+++ b/MScIT_TeamProject_TemplateProject/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.ac.gla</groupId>
-	<artifactId>TopTrumps</artifactId> <!-- MScIT2019Project -->
+	<artifactId>MScIT2019Project</artifactId> <!-- MScIT2019Project -->
 	<version>1.0</version>
 	<name>Top Trumps Application Project</name>
 	<description>This is the template java project for the Top Trumps Assessed Excercise for IT Software Development at Glasgow 2019. </description>
@@ -66,8 +66,6 @@
 
 		<!-- Where do our Java sources come from? -->
 		<sourceDirectory>src</sourceDirectory>
-		
-		<finalName>TopTrumps</finalName>
 
 		<resources>
 			<resource>
