jar files sorted again

--- a/MScIT_TeamProject_TemplateProject/pom.xml
+++ b/MScIT_TeamProject_TemplateProject/pom.xml
@@ -64,6 +64,9 @@
 
 	<build>
 
+
+		<finalName>TopTrumps</finalName>
+
 		<!-- Where do our Java sources come from? -->
 		<sourceDirectory>src</sourceDirectory>
 
